Fixed nav a alignment

--- a/Template/layout.css
+++ b/Template/layout.css
@@ -56,6 +56,7 @@ nav .logo {
 
 nav .main {
 	padding: 20px 10px;
+	margin-top: 10px;
 }
 
 nav .settings {
